crates/autors-ffi/include/autors.h

typedef struct AutorsProject AutorsProject;
typedef struct AutorsMeasurement AutorsMeasurement;
typedef struct AutorsCharacteristic AutorsCharacteristic;


#pragma once

/* WARNING: auto-generated by cbindgen from crates/autors-ffi — do not edit manually. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Return code: success.
 */
#define AUTORS_OK 0

/**
 * Return code: invalid argument (null pointer, malformed string, address out
 * of range, etc.).
 */
#define AUTORS_ERR_INVALID_ARG 1

/**
 * Return code: lookup by name found nothing.
 */
#define AUTORS_ERR_NOT_FOUND 2

/**
 * Return code: A2L parse / file read error.
 */
#define AUTORS_ERR_PARSE 3

/**
 * Return code: internal error (write-out failure, conversion failure, caught
 * panic, etc.).
 */
#define AUTORS_ERR_INTERNAL 4

/**
 * Return value of address queries: the measurement/characteristic has no
 * address set (the 32-bit all-ones sentinel, i.e. `u32::MAX`).
 */
#define AUTORS_ADDRESS_UNSET 4294967295

/**
 * Return value of address queries: the handle itself is invalid (details are
 * available via `autors_last_error` in this case).
 */
#define AUTORS_ADDRESS_INVALID 18446744073709551615ull

/**
 * Create an empty project. Returns NULL on failure (see `autors_last_error`
 * for details).
 */
AutorsProject *autors_project_new(void);

/**
 * Free a project handle (NULL-safe). All borrowed handles
 * (measurement/characteristic) become invalid after this call.
 */
void autors_project_free(AutorsProject *handle);

/**
 * Free a string returned by an `autors_*` function (NULL-safe). Must not be
 * used on the return value of `autors_last_error`.
 */
void autors_string_free(char *s);

/**
 * Get details of the last FFI error on the current thread (an empty string
 * when there is no error).
 * The returned pointer refers to thread-local storage: **do not free it**;
 * it stays valid until the next FFI call.
 */
const char *autors_last_error(void);

/**
 * Parse an A2L project from a file. Returns NULL on failure.
 */
AutorsProject *autors_project_parse_file(const char *path);

/**
 * Parse an A2L project from a text string. Returns NULL on failure.
 */
AutorsProject *autors_project_parse_string(const char *text);

/**
 * Write the project out as A2L text. The return value must be freed with
 * `autors_string_free`; NULL on failure.
 */
char *autors_project_write_string(const AutorsProject *handle);

/**
 * Save the project to a file. Returns 0 on success.
 */
int32_t autors_project_save(const AutorsProject *handle, const char *path);

/**
 * Number of MODULEs in the project. Returns -1 if the handle is invalid.
 */
int32_t autors_project_module_count(const AutorsProject *handle);

/**
 * Name of the MODULE at position `index`. The return value must be freed
 * with `autors_string_free`; NULL if out of range or on failure.
 */
char *autors_project_module_name(const AutorsProject *handle, int32_t index);

/**
 * Total number of MEASUREMENTs across all MODULEs. Returns -1 if the handle
 * is invalid.
 */
int32_t autors_project_measurement_count(const AutorsProject *handle);

/**
 * Find a measurement by name across all modules. Returns a borrowed handle
 * (lives as long as the project; do not free it individually);
 * NULL if not found.
 */
AutorsMeasurement *autors_project_find_measurement(const AutorsProject *handle, const char *name);

/**
 * Find a characteristic by name across all modules. Returns a borrowed
 * handle (lives as long as the project; do not free it individually);
 * NULL if not found.
 */
AutorsCharacteristic *autors_project_find_characteristic(const AutorsProject *handle,
                                                         const char *name);

/**
 * Measurement name. The return value must be freed with
 * `autors_string_free`; NULL on failure.
 */
char *autors_measurement_name(const AutorsMeasurement *meas);

/**
 * Measurement long description (LONG_IDENT). The return value must be freed
 * with `autors_string_free`; NULL on failure.
 */
char *autors_measurement_long_identifier(const AutorsMeasurement *meas);

/**
 * Measurement data type keyword (e.g. "UWORD"; "Unsupported" for types with
 * no keyword). The return value must be freed with `autors_string_free`;
 * NULL on failure.
 */
char *autors_measurement_data_type(const AutorsMeasurement *meas);

/**
 * Name of the COMPU_METHOD referenced by the measurement. The return value
 * must be freed with `autors_string_free`; NULL on failure.
 */
char *autors_measurement_conversion_name(const AutorsMeasurement *meas);

/**
 * Measurement address (ECU_ADDRESS). Returns `AUTORS_ADDRESS_UNSET` if no
 * address is set; `AUTORS_ADDRESS_INVALID` if the handle is invalid.
 */
uint64_t autors_measurement_address(const AutorsMeasurement *meas);

/**
 * Characteristic name. The return value must be freed with
 * `autors_string_free`; NULL on failure.
 */
char *autors_characteristic_name(const AutorsCharacteristic *ch);

/**
 * Characteristic address. Returns `AUTORS_ADDRESS_UNSET` if no address is
 * set; `AUTORS_ADDRESS_INVALID` if the handle is invalid.
 */
uint64_t autors_characteristic_address(const AutorsCharacteristic *ch);

/**
 * Name of the RECORD_LAYOUT referenced by the characteristic. The return
 * value must be freed with `autors_string_free`; NULL on failure.
 */
char *autors_characteristic_record_layout(const AutorsCharacteristic *ch);

/**
 * Name of the COMPU_METHOD referenced by the characteristic. The return
 * value must be freed with `autors_string_free`; NULL on failure.
 */
char *autors_characteristic_conversion_name(const AutorsCharacteristic *ch);

/**
 * Raw value → physical value (using the COMPU_METHOD referenced by the
 * measurement; COMPU_TAB_REF is resolved within the same module).
 * Returns 0 on success and writes `*out`.
 */
int32_t autors_measurement_to_physical(const AutorsProject *handle,
                                       const char *name,
                                       double raw,
                                       double *out);

/**
 * Physical value → raw value (rounded/truncated according to the
 * measurement's data type). Returns 0 on success and writes `*out`.
 */
int32_t autors_measurement_to_raw(const AutorsProject *handle,
                                  const char *name,
                                  double physical,
                                  double *out);

/**
 * Update a measurement's address by name (ECU_ADDRESS; the address must fit
 * in 32 bits). Returns 0 on success.
 */
int32_t autors_measurement_set_address(AutorsProject *handle, const char *name, uint64_t addr);